fix(ExecutionPending) display bug with the overflow on chrome
Set the overflow to visible to remove the 3 dots that chrome puts to
signal there is an overflow

fix #1355

--- a/source/src/main/webapp/css/pages/ExecutionPending.css
+++ b/source/src/main/webapp/css/pages/ExecutionPending.css
@@ -64,3 +64,7 @@
 .control.glyphicon {
   position: static;
 }
+
+.overflowVisible{
+    overflow: visible;
+}
